--- a/README
+++ b/README
@@ -1,3 +1,10 @@
+/* This program is free software. It comes without any warranty, to
+ * the extent permitted by applicable law. You can redistribute it
+ * and/or modify it under the terms of the Do What The Fuck You Want
+ * To Public License, Version 2, as published by Sam Hocevar. See
+ * http://sam.zoy.org/wtfpl/COPYING for more details. */
+
+
 This tool is meant for the purpose of looking up dell warranty information using service tags without resorting to using Dell's webpage form.
 
 Initially, I began working on this project under python, but I've since moved to powershell.
